--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,66 +1,1 @@
-/* _sass/_syntax.scss */
-
-.highlight {
-  background: #000000;
-  border-radius: 8px;
-  padding: 1em;
-}
-
-.highlight .c { color: #6272a4; font-style: italic } /* Comment */
-.highlight .err { color: #ff5555; } /* Error */
-.highlight .k { color: #ff79c6; font-weight: bold } /* Keyword */
-.highlight .o { color: #ff79c6; } /* Operator */
-.highlight .cm { color: #6272a4; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #ff79c6; } /* Comment.Preproc */
-.highlight .c1 { color: #6272a4; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #6272a4; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #ff5555; } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #ff5555; } /* Generic.Error */
-.highlight .gh { color: #8be9fd; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #50fa7b; } /* Generic.Inserted */
-.highlight .go { color: #44475a; } /* Generic.Output */
-.highlight .gp { color: #f1fa8c; } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #8be9fd; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #ff5555; } /* Generic.Traceback */
-.highlight .kc { color: #bd93f9; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #8be9fd; font-style: italic } /* Keyword.Declaration */
-.highlight .kp { color: #ff79c6; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #ff79c6; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #8be9fd; } /* Keyword.Type */
-.highlight .m { color: #bd93f9; } /* Literal.Number */
-.highlight .s { color: #f1fa8c; } /* Literal.String */
-.highlight .na { color: #50fa7b; } /* Name.Attribute */
-.highlight .nb { color: #8be9fd; } /* Name.Builtin */
-.highlight .nc { color: #50fa7b; } /* Name.Class */
-.highlight .no { color: #bd93f9; } /* Name.Constant */
-.highlight .ni { color: #f8f8f2; } /* Name.Entity */
-.highlight .ne { color: #50fa7b; } /* Name.Exception */
-.highlight .nf { color: #50fa7b; } /* Name.Function */
-.highlight .nn { color: #f8f8f2; } /* Name.Namespace */
-.highlight .nt { color: #ff79c6; } /* Name.Tag */
-.highlight .nv { color: #8be9fd; font-style: italic } /* Name.Variable */
-.highlight .ow { color: #ff79c6; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #f8f8f2; } /* Text.Whitespace */
-.highlight .mf { color: #bd93f9; } /* Literal.Number.Float */
-.highlight .mh { color: #bd93f9; } /* Literal.Number.Hex */
-.highlight .mi { color: #bd93f9; } /* Literal.Number.Integer */
-.highlight .mo { color: #bd93f9; } /* Literal.Number.Oct */
-.highlight .sb { color: #f1fa8c; } /* Literal.String.Backtick */
-.highlight .sc { color: #f1fa8c; } /* Literal.String.Char */
-.highlight .sd { color: #f1fa8c; } /* Literal.String.Doc */
-.highlight .s2 { color: #f1fa8c; } /* Literal.String.Double */
-.highlight .se { color: #f1fa8c; } /* Literal.String.Escape */
-.highlight .sh { color: #f1fa8c; } /* Literal.String.Heredoc */
-.highlight .si { color: #f1fa8c; } /* Literal.String.Interpol */
-.highlight .sx { color: #f1fa8c; } /* Literal.String.Other */
-.highlight .sr { color: #f1fa8c; } /* Literal.String.Regex */
-.highlight .s1 { color: #f1fa8c; } /* Literal.String.Single */
-.highlight .dl { color: #f1fa8c; } /* Literal.String.Delimiter */
-.highlight .ss { color: #f1fa8c; } /* Literal.String.Symbol */
-.highlight .bp { color: #f8f8f2; } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #8be9fd; font-style: italic } /* Name.Variable.Class */
-.highlight .vg { color: #8be9fd; font-style: italic } /* Name.Variable.Global */
-.highlight .vi { color: #8be9fd; font-style: italic } /* Name.Variable.Instance */
-.highlight .il { color: #bd93f9; } /* Literal.Number.Integer.Long */
+/* _sass/_syntax.scss - Emptied to prevent conflicts. Styling moved to _sass/_code.scss */
